crates/gridwell-writer-ansi/tests/snapshots/snapshots__colspan-full-width.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┐
│[1m          Full-width spanner          [0m│
│[1m A          [0m│[1m B          [0m│[1m C          [0m│
├────────────┼────────────┼────────────┤
│ 1          │ 2          │ 3          │
└────────────┴────────────┴────────────┘
