crates/gridwell-writer-ansi/tests/snapshots/snapshots__column-widths-mixed.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┬────────────┐
│[1m Fixed      [0m│[1m Percent    [0m│[1m Fraction   [0m│[1m Auto       [0m│
├────────────┼────────────┼────────────┼────────────┤
│ 120px      │ 25%        │ 1fr        │ auto       │
└────────────┴────────────┴────────────┴────────────┘
