crates/gridwell-writer-ansi/tests/snapshots/snapshots__combining-chars.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┐
│[1m Form       [0m│[1m Text       [0m│
├────────────┼────────────┤
│ composed   │ café       │
│ decomposed │ café       │
│ stacked    │ à́̂          │
└────────────┴────────────┘
