crates/gridwell-writer-ansi/tests/snapshots/snapshots__fixed-table-width.snap
---
source: crates/gridwell-writer-ansi/tests/snapshots.rs
expression: out
---
┌────────────┬────────────┬────────────┐
│[1m A          [0m│[1m B          [0m│[1m C          [0m│
├────────────┼────────────┼────────────┤
│ 1          │ 2          │ 3          │
└────────────┴────────────┴────────────┘
